70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/bb88b8bf-63b3-452e-ad73-c3b849f54995/kubernates/solr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-service-6b2273ee-92f6-45d2-b731-fa95e1cde686
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: solr-6b2273ee-92f6-45d2-b731-fa95e1cde686
spec:
  selector:
    app: solr-6b2273ee-92f6-45d2-b731-fa95e1cde686
  ports:
    - port: 80
      targetPort: 8983
      protocol: TCP
  type: ClusterIP
